--- a/walk_up_effect/templates/pages/home.html
+++ b/walk_up_effect/templates/pages/home.html
@@ -36,13 +36,13 @@
         <div class="mb-3 mb-md-6" data-aos="fade-up" data-aos-delay="150">
           <a
             type="button"
-            class="btn btn-primary font-500 w-15 me-2"
+            class="btn btn-primary lift font-500 w-15 me-2"
             href="{% url 'donations:home' %}"
           >
             Donate
           </a>
 
-          <button id="copyBtn" type="button" class="btn btn-primary font-500 w-15">
+          <button id="copyBtn" type="button" class="btn btn-primary-soft lift font-500 w-15">
             Share
           </button>
 
