--- a/walk_up_effect/templates/donations/home.html
+++ b/walk_up_effect/templates/donations/home.html
@@ -9,20 +9,16 @@
 
   <!-- HEADER -->
   <section class="mt-n11 pt-12 pb-4 pt-md-14 bg-black bg-pattern-2">
-    <div class="container pb-12">
+    <div class="container pb-10">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-10 text-center">
         <h1
             class="display-2 fw-bold text-white section-header"
-            data-aos="fade-up"
-            data-aos-delay="50"
           >
             <span class="zap-03">Thank You</span> for Visiting Our Donation Page!
           </h1>
           <p
             class="lead text-gray-500 mb-6 mx-auto"
-            data-aos="fade-up"
-            data-aos-delay="100"
           >
            You are here because you know someone who is participating in  <br/>
             <span class="text-primary"><i>The Walk Up Effect</i></span> event at their school.
@@ -56,11 +52,12 @@
   </section>
 
     <!-- LOCATION -->
-    <section class="py-14 bg-gradient-dark-black">
+    <section class="pt-8 pt-md-12 pb-14 bg-gradient-dark-black">
       <div class="container">
         <div class="row" id="payment">
-          <div class="col-12 col-md-6 col-lg-5">
-            <div class="position-relative vw-md-33 vw-75 d-md-block">
+
+          <div class="col-12 col-md-6 col-lg-5 pe-md-6">
+            <div class="position-relative d-md-block">
 
              <!-- Card -->
               <div class="card shadow-lg mb-6 mb-md-0"
@@ -78,13 +75,18 @@
                     {% include 'donations/payment_form.html' %}
                   </div>
                 </div>
+
             </div>
           </div>
 
-          <div class="col-12 col-md-6 col-lg-7"  {# offset-lg-1#}
+          <div class="col-12 col-md-6 col-lg-7 ps-md-6"  {# offset-lg-1#}
                data-aos="fade-up"
                data-aos-delay="100"
             >
+
+
+            <div class="row row-lh" >
+
             <!-- Heading -->
             <h2 class="text-white">
               Your donation...<br>
@@ -92,13 +94,16 @@
                 <span data-typed='{"strings": ["goes directly to the cause", "helps continue our mission", "helps make an impact in your community"]}'></span>.
               </span>
             </h2>
+
+           </div>
             <!-- Text -->
             <p class="fs-lg text-gray-700 mb-4">
               The Walk Up Effect is a program that travels to schools and
               educates students on mental health and inspires students to be the help and share
               this donation page to provide hope and healing to those who need it.
             </p>
-            <!-- Stats -->
+
+            <!-- Info -->
             <p class="fs-lg text-gray-700 mb-2">With your donation we are able to provide:</p>
             <div class="fs-lg text-gray-700 d-flex">
               <ol>
@@ -109,7 +114,9 @@
                 <li class="mb-1"> Struggling individuals with much needed support.</li>
               </ol>
             </div>
+
           </div>
+
         </div> <!-- / .row -->
       </div> <!-- / .container -->
     </section>
