--- a/walk_up_effect/templates/pages/home.html
+++ b/walk_up_effect/templates/pages/home.html
@@ -42,7 +42,7 @@
             Donate
           </a>
 
-          <button id="copyBtn" type="button" class="btn btn-primary-soft lift font-500 w-15">
+          <button id="copyBtn" type="button" class="btn btn-primary lift font-500 w-15">
             Share
           </button>
 
