--- a/walk_up_effect/templates/donations/payment_form.html
+++ b/walk_up_effect/templates/donations/payment_form.html
@@ -32,7 +32,7 @@
     <div id="card-errors" role="alert"></div>
   </div>
   <div class="mt-6">
-     <a href="#" class="btn w-100 btn-primary-soft lift" id="submitBtn" type="submit">
+     <a href="#" class="btn w-100 btn-primary-soft text-muted lift" id="submitBtn" type="submit">
        Submit <i class="fe fe-arrow-right ms-3"></i>
      </a>
   </div>
