--- a/walk_up_effect/templates/pages/contact-us.html
+++ b/walk_up_effect/templates/pages/contact-us.html
@@ -3,12 +3,6 @@
 {% load static i18n compress %}
 {% block title %}Our Team{% endblock title %}
 
-<!-- prettier-ignore -->
-{% block javascript %}
-  {% compress js %}
-    <script defer src="{% static 'js/user/sweet-alerts.js' %}"></script>
-  {% endcompress js %}
-{% endblock javascript %}
 
 <!-- prettier-ignore -->
 {% block content %}
@@ -46,7 +40,8 @@
         <h6 class="text-uppercase text-gray-700 mb-1">Email us</h6>
 
         <!-- Link -->
-        <a href="#!" class="h4 font-300 text-info">
+        <a href="mailto:bgross1208@gmail.com?subject=I am interested in learning more about The Walk Up Effect"
+           class="h4 font-300 text-info">
           support@thewalkupeffect.org
         </a>
       </div>
