Updated header/ tagline

--- a/walk_up_effect/templates/pages/home.html
+++ b/walk_up_effect/templates/pages/home.html
@@ -19,8 +19,8 @@
           data-aos="fade-up"
           data-aos-delay="50"
         >
-          Its tough to judge someone when you know
-          <span class="zap-02">their&nbsp;story</span>.
+          {#<span class="zap-02"></span>#}
+          The #1 Social Media Driven Non-profit
         </h1>
 
         <!-- Text -->
