--- a/walk_up_effect/templates/partials/modals/modal-change.html
+++ b/walk_up_effect/templates/partials/modals/modal-change.html
@@ -38,17 +38,15 @@
         <p
           class="fs-md text-center text-gray-700 mb-2 mb-md-4 pb-4 border-bottom"
         >
-          Our mission is to change the way everyone perceives mental health.
+          Our mission is to provide hope to as many people as possible.
+
         </p>
 
         <div class="row">
           <div class="col-12">
             <p class="mb-4 text-gray-700">
-              We want to normalize the conversation behind mental health,
-              encourage people to walk up, and empower individuals to speak up.
-              We believe by sticking to our mission daily, we will be able to
-              change the lives of many students and provide them the daily hope
-              they need.
+              We believe by sticking to our mission daily, and holding amazing events for communities,
+              people will learn new habits that will provide hope to others and/or themselves.
             </p>
           </div>
         </div>
