--- a/walk_up_effect/templates/partials/modals/modal-educate.html
+++ b/walk_up_effect/templates/partials/modals/modal-educate.html
@@ -40,8 +40,7 @@
         <p
           class="fs-md text-center text-gray-700 mb-2 mb-md-4 pb-4 border-bottom"
         >
-          Throughout our program, students and staff will be educated on all
-          things mental health.
+          During each event, the audience will learn about all things mental health.
         </p>
 
         <div class="row">
