--- a/walk_up_effect/templates/partials/modals/modal-motivate.html
+++ b/walk_up_effect/templates/partials/modals/modal-motivate.html
@@ -35,8 +35,9 @@
         <p
           class="fs-md text-center text-gray-700 mb-2 mb-md-4 pb-4 border-bottom"
         >
-          We believe in the power of story and we believe it is tough to judge
-          someone when you know their story.
+          We believe in the power of story and how a message can influence positive change in someone's life.<br/> Each
+          event
+          will be headlined by a powerful motivational speaker that will share a powerful story about hope and healing.
         </p>
 
         <div class="row">
