Tagline & What We Do section updates

--- a/walk_up_effect/templates/pages/home.html
+++ b/walk_up_effect/templates/pages/home.html
@@ -3,7 +3,6 @@
 {% load static i18n compress %}
 
 {% block content %}
-
   <!-- HOME PAGE HERO -->
   <section
     class="py-12 py-lg-14 bg-black bg-img-gradient jarallax"
@@ -20,7 +19,7 @@
             data-aos-delay="50"
           >
             {#<span class="zap-02"></span>#}
-            The #1 Social Media Driven Non-profit
+            Story Telling. Life Inspiring. Hope Providing.
           </h1>
 
           <!-- Text -->
@@ -117,62 +116,6 @@
                 data-bs-target="#modalEducate"
               >
                 <span class="h6 text-uppercase"> Learn More </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-4 mt-7">
-          <!-- Card -->
-          <div class="card h-100 bg-dark rounded-3">
-            <div class="card-body p-5 pb-0 my-auto">
-              <!-- Image -->
-              <div
-                class="img-fluid w-50 svg-shim mx-auto"
-                style="max-width: 150px"
-              >
-                {% include "partials/icons/artwork/inspire.svg" %}
-              </div>
-            </div>
-            <div class="card-body text-center p-5">
-              <!-- Heading -->
-              <h3 class="section-header text-uppercase text-white">Inspire</h3>
-              <p class="text-muted mb-4">Students to <i>Walk Up</i></p>
-              <!-- Badge -->
-              <a
-                href="#"
-                class="badge rounded-pill bg-black"
-                data-bs-toggle="modal"
-                data-bs-target="#modalInspire"
-              >
-                <span class="h6 text-uppercase"> Learn More</span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-4 mt-7">
-          <!-- Card -->
-          <div class="card h-100 bg-dark rounded-3">
-            <div class="card-body p-5 pb-0 my-auto">
-              <!-- Image -->
-              <div
-                class="img-fluid w-50 svg-shim mx-auto"
-                style="max-width: 150px"
-              >
-                {% include "partials/icons/artwork/provide.svg" %}
-              </div>
-            </div>
-            <div class="card-body text-center p-5">
-              <!-- Heading -->
-              <h3 class="section-header text-uppercase text-white">Provide</h3>
-              <p class="text-muted mb-4">Mental health support</p>
-              <!-- Badge -->
-              <a
-                href="#"
-                class="badge rounded-pill bg-black"
-                data-bs-toggle="modal"
-                data-bs-target="#modalProvide"
-              >
-                <span class="h6 text-uppercase"> Learn More</span>
               </a>
             </div>
           </div>
