Updated tagline layout

--- a/walk_up_effect/templates/pages/home.html
+++ b/walk_up_effect/templates/pages/home.html
@@ -19,7 +19,21 @@
             data-aos-delay="50"
           >
             {#<span class="zap-02"></span>#}
-            Story Telling. Life Inspiring. Hope Providing.
+            Story Telling.
+          </h1>
+          <h1
+            class="display-1 text-white section-header"
+            data-aos="fade-up"
+            data-aos-delay="50"
+          >
+            Life Inspiring.
+          </h1>
+          <h1
+            class="display-1 text-white section-header"
+            data-aos="fade-up"
+            data-aos-delay="50"
+          >
+            Hope Providing.
           </h1>
 
           <!-- Text -->
