Updated text/ info

--- a/walk_up_effect/templates/pages/mission.html
+++ b/walk_up_effect/templates/pages/mission.html
@@ -81,10 +81,10 @@
                       We are a <span class="zap-07">do-good</span> company.
                     </h2>
                     <p class="text-muted mb-4 mb-md-2 font-300">
-                      Walk Up's mission has always been to inspire. We strive to
-                      inspire individuals to be courageous and walk up and be
-                      the support, the smile, and the strength a person may
-                      need.
+                      Walk Ups mission is simple... to bring hope, joy, and courage to those who need it.
+                      Everyone has struggles and everyone has obstacles they are trying to overcome.
+                      We firmly believe that sometimes someone may just need to hear the right message to feel
+                      comfortable asking for help or to see the importance of being the support someone may be seeking.
                     </p>
                     <p class="text-muted mb-2 mb-md-0 font-300">
                       We were founded with the goal to normalize and spark the
@@ -117,12 +117,15 @@
                       Our primary goal: <span class="zap-03">Impact</span>.
                     </h2>
                     <p class="text-muted mb-2 mb-md-0 font-300">
-                      We hope to make an impact on every staff member, student,
-                      and parent that takes part in our program. It is important
-                      to us that every student we come into contact with feels
-                      inspired to help others, has the strength to get through
-                      another day, and wants to be the change we need in the
-                      world.
+                      We hope to make an impact on every individual that takes part in our program.
+                      It is important to us that every group we come into contact with feels inspired to help others,
+                      has the strength to get through another day, and wants to be the change we need in the world.
+                    </p>
+                    <p class="text-muted my-2 mb-md-0 font-300">
+                      Our goal is to change the perception of the way people view mental health. We want those who
+                      are struggling to feel comfortable asking for help and sharing their story. And we want the
+                      others to be able to notice the signs of those struggling with mental health and be courageous
+                      and willing to be the support they may need.
                     </p>
                   </div>
                 </div>
@@ -152,7 +155,7 @@
           </div>
           <div class="card-body text-center p-2 mt-2">
             <p class="text-white mb-4 font-300">
-              Inspire students to be courageous and Walk Up to someone who
+              Inspire individuals to be courageous and Walk Up to someone who
               appears to be struggling.
             </p>
           </div>
@@ -219,7 +222,7 @@
           </div>
           <div class="card-body text-center p-2 mt-2">
             <p class="text-white mb-4 font-300">
-              Provide the school with motivation and inspiration by bringing
+              Provide communities with motivation and inspiration by bringing
               guest speakers to talk about mental health, hope, and healing.
             </p>
           </div>
