--- a/walk_up_effect/templates/partials/sections/our-why.html
+++ b/walk_up_effect/templates/partials/sections/our-why.html
@@ -7,8 +7,7 @@
       </h2>
       <!-- Text -->
       <p class="lead text-muted mb-4 mb-md-6">
-        Take our quiz to <span class="text-white zap-04">Learn More</span> about
-        your students and mental health.
+        Take our quiz to <span class="text-white zap-04">learn more</span> about mental health and its impact
       </p>
 
       <div class="row justify-content-center">
